[workspace]
members = ["xperformance"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.0"
ctrlc = "3.4"
